set index page & navbar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,171 @@
 </head>
 <body>
   <%- include("./basic/navbar.ejs")%>
-  <h1 class="title">123</h1>
+  <section class="container">
+    <h1 class="title"><i class="fas fa-fire-alt"></i>&nbsp;熱門文章</h1>
+    <div class="columns is-multiline">
+      
+      <div class="column is-4">
+        <div class="columns">
+          <div class="column is-2">
+            <h2 class="title is-2 has-text-grey">01</h2>
+          </div>
+          <div class="column is-10">
+            <article>
+            <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+            <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+            <footer>
+              <p>Oct 17</p>
+            </footer>
+          </article>
+          </div>
+        </div>
+      </div>
+      <div class="column is-4">
+        <div class="columns">
+          <div class="column is-2">
+            <h2 class="title is-2 has-text-grey">02</h2>
+          </div>
+          <div class="column is-10">
+            <article>
+            <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+            <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+            <footer>
+              <p>Oct 17</p>
+            </footer>
+          </article>
+          </div>
+        </div>
+      </div>
+      <div class="column is-4">
+        <div class="columns">
+          <div class="column is-2">
+            <h2 class="title is-2 has-text-grey">03</h2>
+          </div>
+          <div class="column is-10">
+            <article>
+            <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+            <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+            <footer>
+              <p>Oct 17</p>
+            </footer>
+          </article>
+          </div>
+        </div>
+      </div>
+      <div class="column is-4">
+        <div class="columns">
+          <div class="column is-2">
+            <h2 class="title is-2 has-text-grey">04</h2>
+          </div>
+          <div class="column is-10">
+            <article>
+            <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+            <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+            <footer>
+              <p>Oct 17</p>
+            </footer>
+          </article>
+          </div>
+        </div>
+      </div>
+      <div class="column is-4">
+        <div class="columns">
+          <div class="column is-2">
+            <h2 class="title is-2 has-text-grey">05</h2>
+          </div>
+          <div class="column is-10">
+            <article>
+            <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+            <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+            <footer>
+              <p>Oct 17</p>
+            </footer>
+          </article>
+          </div>
+        </div>
+      </div>
+      <div class="column is-4">
+        <div class="columns">
+          <div class="column is-2">
+            <h2 class="title is-2 has-text-grey">06</h2>
+          </div>
+          <div class="column is-10">
+            <article>
+            <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+            <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+            <footer>
+              <p>Oct 17</p>
+            </footer>
+          </article>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr class="divider">
+  <section class="container mt-6">
+    <div class="columns">
+      <div class="column is-8">
+        <div class="columns is-multiline">
+          <div class="column is-fall">
+            <article class="media">
+              <div class="media-content">
+                <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+                <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+                <p>安倍元総理大臣は今年7月、奈良市で選挙に出る人を応援する演説をしているとき、銃で撃たれて亡くなりました。国は27日、東京で安倍元総理大臣のお葬式を行いました。岸田総理大臣や、国会議員、外国の首相などが出席しました。</p>
+                <footer>
+                  <p>Oct 17</p>
+                </footer>
+              </div>
+              <figure class="media-right">
+                <img src="https://fakeimg.pl/250x200/f0f0f0" alt="">
+              </figure>
+            </article>
+            <article class="media">
+              <div class="media-content">
+                <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+                <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+                <p>安倍元総理大臣は今年7月、奈良市で選挙に出る人を応援する演説をしているとき、銃で撃たれて亡くなりました。国は27日、東京で安倍元総理大臣のお葬式を行いました。岸田総理大臣や、国会議員、外国の首相などが出席しました。</p>
+                <footer>
+                  <p>Oct 17</p>
+                </footer>
+              </div>
+              <figure class="media-right">
+                <img src="https://fakeimg.pl/250x200/f0f0f0" alt="">
+              </figure>
+            </article>
+            <article class="media">
+              <div class="media-content">
+                <h2 class="title is-6 "><i class="fas fa-user"></i>使用者</h2>
+                <h3 class="title is-5">安倍元総理大臣のお葬式が終わる</h3>
+                <p>安倍元総理大臣は今年7月、奈良市で選挙に出る人を応援する演説をしているとき、銃で撃たれて亡くなりました。国は27日、東京で安倍元総理大臣のお葬式を行いました。岸田総理大臣や、国会議員、外国の首相などが出席しました。</p>
+                <footer>
+                  <p>Oct 17</p>
+                </footer>
+              </div>
+              <figure class="media-right">
+                <img src="https://fakeimg.pl/250x200/f0f0f0" alt="">
+              </figure>
+            </article>
+          </div>
+        </div>
+      </div>
+      <div class="column is-4">
+        <h3 class="title is-5">找找其他類型的文章：</h3>
+        <span class="tag is-black">Black</span>
+        <span class="tag is-dark">Dark</span>
+        <span class="tag is-light">Light</span>
+        <span class="tag is-white">White</span>
+        <span class="tag is-primary">Primary</span>
+        <span class="tag is-link">Link</span>
+        <span class="tag is-info">Info</span>
+        <span class="tag is-success">Success</span>
+        <span class="tag is-warning">Warning</span>
+        <span class="tag is-danger">Danger</span>
+      </div>
+    </div>
+  </section>
+  
 </body>
 </html>
