--- a/views/basic/navbar.ejs
+++ b/views/basic/navbar.ejs
@@ -27,7 +27,7 @@
     <div id="navbar" class="navbar-menu">
       <div class="navbar-end">
         <div class="navbar-item">
-          <a href=""><i class="fas fa-home"></i></a>
+          <a href="/"><i class="fas fa-home"></i></a>
         </div>
         <div class="navbar-item">
           <a href=""><i class="fas fa-bell"></i></a>
@@ -55,13 +55,187 @@
         </div>
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary" href="/register" id="register">註冊</a>
-            <a class="button is-light" href="/log_in" id="sign_in"></i>登入</a>
+            <button class="button js-modal-trigger is-primary " data-target="modal" id="btn1">登入</button>
+            <button class="button js-modal-trigger is-light " data-target="modal" id="btn2">註冊</button>
           </div>
         </div>
       </div>
     </div>
   </nav>
+
+  <!-- 登入會員 modal -->
+  <div class="modal" id="modal-login">
+    <div class="modal-background"></div>
+        <div class="modal-card">
+          <header class="modal-card-head">
+            <p class="title is-3 mt-3 modal-card-title has-text-centered ">登入會員</p>
+            <button class="delete" aria-label="close" data-bulma-modal="close"></button>
+          </header>
+          <section class="modal-card-body">
+            <div class="field">
+              <p class="control has-icons-left has-icons-right">
+                <input class="input" type="email" placeholder="Email">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-envelope"></i>
+                </span>
+                <span class="icon is-small is-right">
+                  <i class="fas fa-check"></i>
+                </span>
+              </p>
+            </div>
+            <div class="field">
+              <p class="control has-icons-left">
+                <input class="input" type="password" placeholder="Password">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-lock"></i>
+                </span>
+              </p>
+            </div>
+          </section>
+          <footer class="modal-card-foot">
+            <div class="field">
+              <p class="control">
+                <button class="button is-success">
+                  登入
+                </button>
+                <button class="button is-danger" data-bulma-modal="close">
+                  取消
+                </button>
+              </p>
+            </div>
+          </footer>
+        </div>
+      </div>
+  </div>
+
+  <!-- 註冊會員 modal -->
+  <div class="modal" id="modal-register">
+    <div class="modal-background"></div>
+        <div class="modal-card">
+          <header class="modal-card-head">
+            <p class="title is-3 mt-3 modal-card-title has-text-centered ">註冊會員</p>
+            <button class="delete" aria-label="close" data-bulma-modal="close"></button>
+          </header>
+          <section class="modal-card-body">
+            <div class="field">
+              <p class="control has-icons-left has-icons-right">
+                <input class="input" type="text" placeholder="Name">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-user"></i>
+                </span>
+                <span class="icon is-small is-right">
+                  <i class="fas fa-check"></i>
+                </span>
+              </p>
+            </div>
+            <div class="field">
+              <p class="control has-icons-left has-icons-right">
+                <input class="input" type="email" placeholder="Email">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-envelope"></i>
+                </span>
+                <span class="icon is-small is-right">
+                  <i class="fas fa-check"></i>
+                </span>
+              </p>
+            </div>
+            <div class="field">
+              <p class="control has-icons-left">
+                <input class="input" type="password" placeholder="Password">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-lock"></i>
+                </span>
+              </p>
+            </div>
+          </section>
+          <footer class="modal-card-foot">
+            <div class="field">
+              <p class="control">
+                <button class="button is-success">
+                  註冊
+                </button>
+                <button class="button is-danger" data-bulma-modal="close">
+                  取消
+                </button>
+              </p>
+            </div>
+          </footer>
+        </div>
+      </div>
+  </div>
 </body>
-  
+  <script>
+
+  // 設定bulma modal
+  class BulmaModal {
+	constructor(selector) {
+		this.elem = document.querySelector(selector)
+		this.close_data()
+	}
+	
+	show() {
+		this.elem.classList.toggle('is-active')
+		this.on_show()
+	}
+	
+	close() {
+		this.elem.classList.toggle('is-active')
+		this.on_close()
+	}
+	
+	close_data() {
+		var modalClose = this.elem.querySelectorAll("[data-bulma-modal='close'], .modal-background")
+		var that = this
+		modalClose.forEach(function(e) {
+			e.addEventListener("click", function() {
+				
+				that.elem.classList.toggle('is-active')
+				var event = new Event('modal:close')
+				that.elem.dispatchEvent(event);
+			})
+		})
+	}
+	
+	on_show() {
+		var event = new Event('modal:show')
+	
+		this.elem.dispatchEvent(event);
+	}
+	
+	on_close() {
+		var event = new Event('modal:close')
+	
+		this.elem.dispatchEvent(event);
+	}
+	
+	addEventListener(event, callback) {
+		this.elem.addEventListener(event, callback)
+	}
+}
+  // 登入會員 modal
+  let btn1 = document.querySelector("#btn1")
+  let mdl = new BulmaModal("#modal-login")
+  btn1.addEventListener("click", function () {
+    mdl.show()
+  })
+  mdl.addEventListener('modal:show', function() {
+    console.log("opened")
+  })
+  mdl.addEventListener("modal:close", function() {
+    console.log("closed")
+  })
+
+  // 註冊會員 modal
+  let btn2 = document.querySelector("#btn2")
+  let md2 = new BulmaModal("#modal-register")
+  btn2.addEventListener("click", function () {
+    md2.show()
+  })
+  md2.addEventListener('modal:show', function() {
+    console.log("opened")
+  })
+  md2.addEventListener("modal:close", function() {
+    console.log("closed")
+  })
+  </script>
 </html>
