--- a/views/basic/navbar.ejs
+++ b/views/basic/navbar.ejs
@@ -9,6 +9,12 @@
   <!-- font-awesome -->
   <script src="https://kit.fontawesome.com/b506b41292.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" 
+  integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+  <!-- axios -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0/axios.js"
+  integrity="sha512-HHy6oUGCSBNnEOOG5qtKfLj/ROEAUdbVkznx6Y7x9+qBOvL3PE+oEBSliM5dcOlqMxiuXqca58WbFPXimX11LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -119,7 +125,7 @@
           <section class="modal-card-body">
             <div class="field">
               <p class="control has-icons-left has-icons-right">
-                <input class="input" type="text" placeholder="Name">
+                <input class="input" type="text" placeholder="Name" id="rgName">
                 <span class="icon is-small is-left">
                   <i class="fas fa-user"></i>
                 </span>
@@ -130,7 +136,7 @@
             </div>
             <div class="field">
               <p class="control has-icons-left has-icons-right">
-                <input class="input" type="email" placeholder="Email">
+                <input class="input" type="email" placeholder="Email" id="rgEmail">
                 <span class="icon is-small is-left">
                   <i class="fas fa-envelope"></i>
                 </span>
@@ -141,7 +147,15 @@
             </div>
             <div class="field">
               <p class="control has-icons-left">
-                <input class="input" type="password" placeholder="Password">
+                <input class="input" type="password" placeholder="Password" id="rgPassword">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-lock"></i>
+                </span>
+              </p>
+            </div>
+            <div class="field">
+              <p class="control has-icons-left">
+                <input class="input" type="password" placeholder="Enter Password Again" id="rgPasswordCheck">
                 <span class="icon is-small is-left">
                   <i class="fas fa-lock"></i>
                 </span>
@@ -151,7 +165,7 @@
           <footer class="modal-card-foot">
             <div class="field">
               <p class="control">
-                <button class="button is-success">
+                <button class="button is-success" id="register">
                   註冊
                 </button>
                 <button class="button is-danger" data-bulma-modal="close">
